--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "chalk": "^1.1.1",
     "express": "^4.13.3",
+    "mysql": "^2.9.0",
     "nodemon": "^1.8.1",
+    "sequelize": "^3.13.0",
     "swig": "^1.4.2",
     "underscore": "^1.8.3"
   }
